<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Presentacion.Ejercicios.AddEjercicioActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/img_5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/white" />

    <TextView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="28dp"
        android:text="Creando un ejercicio"
        android:textSize="20sp"
        android:textStyle="normal|bold">
    </TextView>
    <TextView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp">
    </TextView>

    <EditText
        android:id="@+id/EjerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Titulo*"
        android:inputType="text" />

    <!-- Primero linear para el otro spinner!-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView

            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif-black"
            android:text="Grupo Muscular"/>


        <Spinner
            android:id="@+id/spinnerCrearEjGrupoMusc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"/>
    </LinearLayout>

    <!-- Segundo linear para el otro spinner!-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">


        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif-black"
            android:text="Tipo de Ejercicio" />

        <Spinner
            android:id="@+id/spinnerCrearEjTipoEj"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"/>
    </LinearLayout>

    <EditText
        android:id="@+id/EjerDetails"
        android:layout_width="391dp"
        android:layout_height="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_text"
        android:ems="10"
        android:fadeScrollbars="true"
        android:gravity="start|top"
        android:hint="Descripción del Ejercicio"
        android:padding="10dp"
        android:inputType="textMultiLine"

        android:scrollbars="vertical" />


</LinearLayout>