<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/saveEjer"
        android:icon="@drawable/baseline_check"
        android:title="Save"
        app:showAsAction="ifRoom" />
</menu>